codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__preamble_keeps_working_status.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 28
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• 0s                                                                            "
"Ask anything... "Fix a TODO in the codebase"                                    "
