codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__reasoning_delta_restores_recreated_status_indicator.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"Ask anything... "Fix a TODO in the codebase"                                    "
"Checking files (0s • esc to interrupt) · 1 background terminal running · /ps to…"
